welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:14: error: type mismatch;
 found   : Unit
 required: java.awt.Color
		for (j<- 0 to q-1) {
                      ^