welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {

	var T = new Array[Color](getMondeHauteur());
	for(w<- 0 to T.length-1) {
		T(w) = getCouleurSol();
		avance();
		}
	def alpha():Color = {
		gauche();
		avance();
		droite();
		var q = getMondeLargeur();
		for (j<- 0 to q-1) {
			T(j)
			avance();
		
		}
		
	}
}

